prompt for lot id when generating local.sh